<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/circle" />

    <EditText

        android:id="@+id/username_et_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/login_textview_vector"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />

    <EditText
        android:id="@+id/email_ID_et_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/login_textview_vector"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:padding="8dp"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_et_register" />

    <EditText
        android:id="@+id/pass_et_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/login_textview_vector"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:padding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_ID_et_register" />

    <EditText
        android:id="@+id/confirm_pass_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/login_textview_vector"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:padding="8dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_et_register" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876"
        app:srcCompat="@drawable/button_vector" />

    <TextView
        android:id="@+id/register_textview"
        android:layout_width="202dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:shadowColor="#F3E7E7"
        android:text="@string/regiter"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="Already a User? "
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_in_textview"
        android:layout_width="68dp"
        android:layout_height="37dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="SIGN IN"
        android:textColor="#118A86"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="216dp"
        android:layout_height="159dp"
        app:layout_constraintBottom_toTopOf="@+id/username_et_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.741"
        app:srcCompat="@drawable/register_vector" />

    <ProgressBar
        android:id="@+id/progressBar_register"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pass_register" />

</androidx.constraintlayout.widget.ConstraintLayout>